--- a/sconslearning/SConstruct
+++ b/sconslearning/SConstruct
@@ -1,2 +1,5 @@
-Program(target = 'addmain', source = ['Hello.cpp','add.cpp'])
-Program(target = 'anotheradd', source = ['AnotherAdd.cpp', 'add.cpp'])
+common = ['add.cpp', 'minus.cpp']
+sourcelist1 = ['Hello.cpp'] + common
+sourcelist2 = ['AnotherAdd.cpp'] + common
+Program(target = 'calc', source = sourcelist1)
+Program(target = 'AnotherCalc', source = sourcelist2)
