generate shared library with scons

--- a/sconslearning/SConstruct
+++ b/sconslearning/SConstruct
@@ -3,3 +3,5 @@ sourcelist1 = ['Hello.cpp'] + common
 sourcelist2 = ['AnotherAdd.cpp'] + common
 Program(target = 'calc', source = sourcelist1)
 Program(target = 'AnotherCalc', source = sourcelist2)
+
+SharedLibrary('add', 'add.cpp')
