learn how to separate binary file with source file using scons

--- a/sconslearning/SConstruct
+++ b/sconslearning/SConstruct
@@ -1,12 +1,2 @@
-common = ['add.cpp', 'minus.cpp']
-sourcelist1 = ['Hello.cpp'] + common
-sourcelist2 = ['AnotherAdd.cpp'] + common
-#Program(target = 'calc', source = sourcelist1)
-#Program(target = 'AnotherCalc', source = sourcelist2)
-#SharedLibrary('add', 'add.cpp')
-#Program(target = 'AddTest', source = ['add_test.cpp'], LIBS=['add'], LIBPATH='.')
-
-
-env = Environment()
-hello = env.Program(source = sourcelist1)
-env.Install('/Users/xiefengchang/test/s/bench/selfmadecpptutorial/sconslearning/build', hello)
+VariantDir('build', 'src', duplicate=0)
+SConscript('build/SConscript')
