try c++ funtional, callable objects

--- a/sconslearning/src/SConscript
+++ b/sconslearning/src/SConscript
@@ -9,4 +9,5 @@ sourcelist2 = ['AnotherAdd.cpp'] + common
 env = Environment()
 hello = env.Program(source = sourcelist1)
 
-SConscript('multithreading/SConscript')
+SConscript(['multithreading/SConscript',
+'callable/SConscript'])
